Added before login pages. Minor change in gulpfile. Added user menu.

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/tests-dashboard/tests-dashboard.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/tests-dashboard/tests-dashboard.html
@@ -8,13 +8,13 @@
     </div>
     <div class="blocks-area">
         <div class="row">
-            <div class="col-md-5ths">
+            <div class="col-md-5ths col-sm-4">
                 <div class="create-test-block">
                     <i class="material-icons">add</i>
                     <h2>Create New Test</h2>
                 </div>
             </div>
-            <div class="col-md-5ths">
+            <div class="col-md-5ths col-sm-4">
                 <div class="test-block">
                     <div class="test-title clearfix">
                         <h2 class="pull-left">BBIT 10-08-2017</h2>
@@ -30,7 +30,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-5ths">
+            <div class="col-md-5ths col-sm-4">
                 <div class="test-block">
                     <div class="test-title clearfix">
                         <h2 class="pull-left">BBIT 10-08-2017</h2>
@@ -46,7 +46,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-5ths">
+            <div class="col-md-5ths col-sm-4">
                 <div class="test-block">
                     <div class="test-title clearfix">
                         <h2 class="pull-left">BBIT 10-08-2017</h2>
@@ -62,7 +62,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-5ths">
+            <div class="col-md-5ths col-sm-4">
                 <div class="test-block">
                     <div class="test-title clearfix">
                         <h2 class="pull-left">BBIT 10-08-2017</h2>
@@ -78,7 +78,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-5ths">
+            <div class="col-md-5ths col-sm-4">
                 <div class="test-block">
                     <div class="test-title clearfix">
                         <h2 class="pull-left">BBIT 10-08-2017</h2>
@@ -94,7 +94,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-5ths">
+            <div class="col-md-5ths col-sm-4">
                 <div class="test-block">
                     <div class="test-title clearfix">
                         <h2 class="pull-left">BBIT 10-08-2017</h2>
@@ -110,7 +110,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-5ths">
+            <div class="col-md-5ths col-sm-4">
                 <div class="test-block">
                     <div class="test-title clearfix">
                         <h2 class="pull-left">BBIT 10-08-2017</h2>
