--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/app.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/app.html
@@ -17,14 +17,13 @@
                 <li [routerLinkActive]="['active']"><a href="#" class="h2" [routerLink]="['questions']">Questions</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#"><i class="material-icons">help</i></a></li>
+                <li><i class="material-icons">help</i></li>
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="material-icons">account_circle</i></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Profile</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">Logout</a></li>
-                    </ul>
+                    <i class="material-icons" [mdMenuTriggerFor]="userMenu">account_circle</i>
+                    <md-menu #userMenu="mdMenu" [overlapTrigger]="false" x-position="before">
+                        <button md-menu-item [routerLink]="['profile']">Profile</button>
+                        <button md-menu-item>Logout</button>
+                    </md-menu>
                 </li>
             </ul>
         </div><!-- /.navbar-collapse -->
