--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/questions-dashboard.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/questions-dashboard.html
@@ -7,7 +7,7 @@
         </div>
     </div>
     <div class="main-block clearfix">
-        <div class="col-md-3 category-block">
+        <div class="col-md-3 col-sm-4 category-block">
             <div class="block-title clearfix">
                 <h2 class="pull-left">Sections</h2>
                 <a href="" class="pull-right"><i class="material-icons">add</i></a>
@@ -33,7 +33,7 @@
                 </li>
             </ul>
         </div>
-        <div class="col-md-9 col-md-offset-3 questions-block">
+        <div class="col-md-9 col-sm-8 col-md-offset-3 col-sm-offset-4 questions-block">
             <div class="block-title">
                 <h2>All Questions</h2>
             </div>
