--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/tests-dashboard/tests-dashboard.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/tests-dashboard/tests-dashboard.html
@@ -9,7 +9,7 @@
     <div class="blocks-area">
         <div class="row">
             <div class="col-md-5ths col-sm-4">
-                <div class="create-test-block">
+                <div class="create-test-block" (click)="createTestDialog()">
                     <i class="material-icons">add</i>
                     <h2>Create New Test</h2>
                 </div>
@@ -18,7 +18,13 @@
                 <div class="test-block">
                     <div class="test-title clearfix">
                         <h2 class="pull-left">BBIT 10-08-2017</h2>
-                        <a href="" class="pull-right"><i class="material-icons">more_vert</i></a>
+                        <i class="material-icons pull-right" [mdMenuTriggerFor]="testMenu">more_vert</i>
+                        <md-menu #testMenu="mdMenu" [overlapTrigger]="false" x-position="before">
+                            <button md-menu-item>Edit</button>
+                            <button md-menu-item>Delete</button>
+                            <button md-menu-item>Duplicate</button>
+                            <button md-menu-item>Settings</button>
+                        </md-menu>
                     </div>
                     <div class="test-details">
                         <p class="light-text">150 Questions</p>
@@ -34,7 +40,13 @@
                 <div class="test-block">
                     <div class="test-title clearfix">
                         <h2 class="pull-left">BBIT 10-08-2017</h2>
-                        <a href="" class="pull-right"><i class="material-icons">more_vert</i></a>
+                        <i class="material-icons pull-right" [mdMenuTriggerFor]="testMenu">more_vert</i>
+                        <md-menu #testMenu="mdMenu" [overlapTrigger]="false" x-position="before">
+                            <button md-menu-item>Edit</button>
+                            <button md-menu-item>Delete</button>
+                            <button md-menu-item>Duplicate</button>
+                            <button md-menu-item>Settings</button>
+                        </md-menu>
                     </div>
                     <div class="test-details">
                         <p class="light-text">150 Questions</p>
@@ -50,7 +62,13 @@
                 <div class="test-block">
                     <div class="test-title clearfix">
                         <h2 class="pull-left">BBIT 10-08-2017</h2>
-                        <a href="" class="pull-right"><i class="material-icons">more_vert</i></a>
+                        <i class="material-icons pull-right" [mdMenuTriggerFor]="testMenu">more_vert</i>
+                        <md-menu #testMenu="mdMenu" [overlapTrigger]="false" x-position="before">
+                            <button md-menu-item>Edit</button>
+                            <button md-menu-item>Delete</button>
+                            <button md-menu-item>Duplicate</button>
+                            <button md-menu-item>Settings</button>
+                        </md-menu>
                     </div>
                     <div class="test-details">
                         <p class="light-text">150 Questions</p>
@@ -66,7 +84,13 @@
                 <div class="test-block">
                     <div class="test-title clearfix">
                         <h2 class="pull-left">BBIT 10-08-2017</h2>
-                        <a href="" class="pull-right"><i class="material-icons">more_vert</i></a>
+                        <i class="material-icons pull-right" [mdMenuTriggerFor]="testMenu">more_vert</i>
+                        <md-menu #testMenu="mdMenu" [overlapTrigger]="false" x-position="before">
+                            <button md-menu-item>Edit</button>
+                            <button md-menu-item>Delete</button>
+                            <button md-menu-item>Duplicate</button>
+                            <button md-menu-item>Settings</button>
+                        </md-menu>
                     </div>
                     <div class="test-details">
                         <p class="light-text">150 Questions</p>
@@ -82,7 +106,13 @@
                 <div class="test-block">
                     <div class="test-title clearfix">
                         <h2 class="pull-left">BBIT 10-08-2017</h2>
-                        <a href="" class="pull-right"><i class="material-icons">more_vert</i></a>
+                        <i class="material-icons pull-right" [mdMenuTriggerFor]="testMenu">more_vert</i>
+                        <md-menu #testMenu="mdMenu" [overlapTrigger]="false" x-position="before">
+                            <button md-menu-item>Edit</button>
+                            <button md-menu-item>Delete</button>
+                            <button md-menu-item>Duplicate</button>
+                            <button md-menu-item>Settings</button>
+                        </md-menu>
                     </div>
                     <div class="test-details">
                         <p class="light-text">150 Questions</p>
@@ -98,7 +128,13 @@
                 <div class="test-block">
                     <div class="test-title clearfix">
                         <h2 class="pull-left">BBIT 10-08-2017</h2>
-                        <a href="" class="pull-right"><i class="material-icons">more_vert</i></a>
+                        <i class="material-icons pull-right" [mdMenuTriggerFor]="testMenu">more_vert</i>
+                        <md-menu #testMenu="mdMenu" [overlapTrigger]="false" x-position="before">
+                            <button md-menu-item>Edit</button>
+                            <button md-menu-item>Delete</button>
+                            <button md-menu-item>Duplicate</button>
+                            <button md-menu-item>Settings</button>
+                        </md-menu>
                     </div>
                     <div class="test-details">
                         <p class="light-text">150 Questions</p>
@@ -114,7 +150,13 @@
                 <div class="test-block">
                     <div class="test-title clearfix">
                         <h2 class="pull-left">BBIT 10-08-2017</h2>
-                        <a href="" class="pull-right"><i class="material-icons">more_vert</i></a>
+                        <i class="material-icons pull-right" [mdMenuTriggerFor]="testMenu">more_vert</i>
+                        <md-menu #testMenu="mdMenu" [overlapTrigger]="false" x-position="before">
+                            <button md-menu-item>Edit</button>
+                            <button md-menu-item>Delete</button>
+                            <button md-menu-item>Duplicate</button>
+                            <button md-menu-item>Settings</button>
+                        </md-menu>
                     </div>
                     <div class="test-details">
                         <p class="light-text">150 Questions</p>
