--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-dashboard/profile-dashboard.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-dashboard/profile-dashboard.html
@@ -7,5 +7,6 @@
         <p><span class="h5">Email</span> john.doe@gmail.com</p>
         <p><span class="h5">Contact Number</span> 9274826475</p>
         <p><span class="h5">Organization</span> Promact Infotech Pvt Ltd</p>
+        <p class="h5 cp-dialog-link" (click)="changePasswordDialog()">Change Password</p>
     </div>
 </div>
