Designed Basic Setup page.

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-multiple-answers/questions-multiple-answers.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-multiple-answers/questions-multiple-answers.html
@@ -1,7 +1,7 @@
 ﻿<div class="simple-ans">
     <div class="header">
         <h2>Question</h2>
-        <h5>Single Answer Question</h5>
+        <h5>Multiple Answer Question</h5>
     </div>
     <form>
         <div class="form-fields">
