--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/add-category-dialog.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/add-category-dialog.html
@@ -6,11 +6,11 @@
     <div class="dialog-body">
         <div class="form-group">
             <label class="h4">Section Name</label>
-            <input type="text" class="form-control" placeholder="Ex. General Knowledge" />
+            <input type="text" class="form-control" [(ngModel)]="category.CategoryName" placeholder="Ex. General Knowledge" />
         </div>
     </div>
     <div class="dialog-actions">
         <button type="button" class="btn" md-dialog-close>Cancel</button>
-        <button type="submit" class="btn btn-primary">Create</button>
+        <button type="submit" class="btn btn-primary" (click)="CategoryAdd(category)">Create</button>
     </div>
 </div>
