designed rename-category-dialogcomponent
Client side Component Created,added method to add and Update Category

client side validation implemented

Method Name Changed
Client Side validation Change
update variable Name

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/questions-dashboard.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/questions-dashboard.html
@@ -19,7 +19,7 @@
             {{category.categoryName}}
             <em class="material-icons pull-right" [mdMenuTriggerFor]="categoryMenu">more_vert</em>
             <md-menu #categoryMenu="mdMenu" [overlapTrigger]="false" x-position="before">
-              <button md-menu-item>Rename</button>
+              <button md-menu-item (click)="renameCategoryDialog(category)">Rename</button>
               <button md-menu-item (click)="deleteCategoryDialog()">Delete</button>
             </md-menu>
           </li>
