--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/add-category-dialog.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/add-category-dialog.html
@@ -1,17 +1,20 @@
 ﻿<div class="dialog">
-  <div class="dialog-title clearfix">
-    <h1 class="pull-left" md-dialog-title>Create New Section</h1>
-    <button type="button" class="pull-right" md-dialog-close><em class="material-icons">close</em></button>
-  </div>
-  <md-dialog-content>
-    <div class="form-group">
-      <label class="h4">Section Name</label>
-      <input type="text" class="form-control" placeholder="Ex. General Knowledge" />
-      <div class="errors-container"></div>
+    <div class="dialog-title clearfix">
+        <h1 class="pull-left" md-dialog-title>Create New Section</h1>
+        <button type="button" class="pull-right" md-dialog-close><i class="material-icons">close</i></button>
     </div>
-  </md-dialog-content>
-  <md-dialog-actions>
-    <button type="button" class="btn" md-dialog-close>Cancel</button>
-    <button type="submit" class="btn btn-primary">Create</button>
-  </md-dialog-actions>
+    <md-dialog-content>
+        <div class="form-group">
+            <label class="h4">Section Name</label>
+            <input type="text" class="form-control" id="CategoryName" [(ngModel)]="category.categoryName" (change)="changeErrorMessage()" name="CategoryName" #CategoryName="ngModel" placeholder="Ex. General Knowledge" maxlength="150" required />
+            <span *ngIf="isCategoryNameExist" class="error-msg">{{errormesseage}}</span>
+            <span *ngIf="CategoryName.errors && (CategoryName.dirty || CategoryName.touched)" [hidden]="!CategoryName.errors.required" class="error-msg">Category Name Required</span>
+        </div>
+    </md-dialog-content>
+    <md-dialog-actions>
+        <button type="button" class="btn" md-dialog-close>Cancel</button>
+        <button type="submit" class="btn btn-primary" (click)="addCategory(category)">Create</button>
+    </md-dialog-actions>
 </div>
+
+
