--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/questions-dashboard.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/questions-dashboard.html
@@ -20,10 +20,9 @@
                         <i class="material-icons pull-right" [mdMenuTriggerFor]="categoryMenu">more_vert</i>
                         <md-menu #categoryMenu="mdMenu" [overlapTrigger]="false" x-position="before">
                             <button md-menu-item>Rename</button>
-                            <button md-menu-item >Delete</button>
+                            <button md-menu-item (click)="removeCategory(cat)">Delete</button>
                         </md-menu>
                     </li>
-
                 </ul>
             </div>
             <div class="col-md-9 col-sm-8 col-md-offset-3 col-sm-offset-4 questions-block">
