--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/tests-dashboard/tests-dashboard.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/tests-dashboard/tests-dashboard.html
@@ -3,7 +3,7 @@
         <div class="title-area clearfix">
             <h1 class="pull-left">Tests</h1>
             <div class="search-area pull-right">
-                <input type="text" [hidden]="!showSearchInput" />
+                <input type="text" [hidden]="!showSearchInput" [(ngModel)]="term" />
                 <button type="button" (click)="showSearchInput = !showSearchInput"><i class="material-icons">search</i></button>
             </div>
         </div>
@@ -15,157 +15,27 @@
                         <h2>Create New Test</h2>
                     </div>
                 </div>
-                <div class="col-md-5ths col-sm-4">
-                    <div class="test-block">
-                        <div class="test-title clearfix">
-                            <h2 class="pull-left">BBIT 10-08-2017</h2>
-                            <i class="material-icons pull-right" [mdMenuTriggerFor]="testMenu">more_vert</i>
-                            <md-menu #testMenu="mdMenu" [overlapTrigger]="false" x-position="before">
-                                <a md-menu-item>Edit</a>
-                                <a md-menu-item>Delete</a>
-                                <a md-menu-item>Duplicate</a>
-                                <a md-menu-item [routerLink]="['settings']">Settings</a>
-                            </md-menu>
-                        </div>
-                        <div class="test-details">
-                            <p class="light-text">150 Questions</p>
-                            <p class="light-text">3 Sections</p>
-                            <p class="light-text">123 Candidates</p>
-                        </div>
-                        <div class="text-center">
-                            <button type="button" class="btn btn-primary">View Report</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-5ths col-sm-4">
-                    <div class="test-block">
-                        <div class="test-title clearfix">
-                            <h2 class="pull-left">BBIT 10-08-2017</h2>
-                            <i class="material-icons pull-right" [mdMenuTriggerFor]="testMenu">more_vert</i>
-                            <md-menu #testMenu="mdMenu" [overlapTrigger]="false" x-position="before">
-                                <a md-menu-item>Edit</a>
-                                <a md-menu-item>Delete</a>
-                                <a md-menu-item>Duplicate</a>
-                                <a md-menu-item [routerLink]="['settings']">Settings</a>
-                            </md-menu>
-                        </div>
-                        <div class="test-details">
-                            <p class="light-text">150 Questions</p>
-                            <p class="light-text">3 Sections</p>
-                            <p class="light-text">123 Candidates</p>
-                        </div>
-                        <div class="text-center">
-                            <button type="button" class="btn btn-primary">View Report</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-5ths col-sm-4">
-                    <div class="test-block">
-                        <div class="test-title clearfix">
-                            <h2 class="pull-left">BBIT 10-08-2017</h2>
-                            <i class="material-icons pull-right" [mdMenuTriggerFor]="testMenu">more_vert</i>
-                            <md-menu #testMenu="mdMenu" [overlapTrigger]="false" x-position="before">
-                                <a md-menu-item>Edit</a>
-                                <a md-menu-item>Delete</a>
-                                <a md-menu-item>Duplicate</a>
-                                <a md-menu-item [routerLink]="['settings']">Settings</a>
-                            </md-menu>
-                        </div>
-                        <div class="test-details">
-                            <p class="light-text">150 Questions</p>
-                            <p class="light-text">3 Sections</p>
-                            <p class="light-text">123 Candidates</p>
-                        </div>
-                        <div class="text-center">
-                            <button type="button" class="btn btn-primary">View Report</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-5ths col-sm-4">
-                    <div class="test-block">
-                        <div class="test-title clearfix">
-                            <h2 class="pull-left">BBIT 10-08-2017</h2>
-                            <i class="material-icons pull-right" [mdMenuTriggerFor]="testMenu">more_vert</i>
-                            <md-menu #testMenu="mdMenu" [overlapTrigger]="false" x-position="before">
-                                <a md-menu-item>Edit</a>
-                                <a md-menu-item>Delete</a>
-                                <a md-menu-item>Duplicate</a>
-                                <a md-menu-item [routerLink]="['settings']">Settings</a>
-                            </md-menu>
-                        </div>
-                        <div class="test-details">
-                            <p class="light-text">150 Questions</p>
-                            <p class="light-text">3 Sections</p>
-                            <p class="light-text">123 Candidates</p>
-                        </div>
-                        <div class="text-center">
-                            <button type="button" class="btn btn-primary">View Report</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-5ths col-sm-4">
-                    <div class="test-block">
-                        <div class="test-title clearfix">
-                            <h2 class="pull-left">BBIT 10-08-2017</h2>
-                            <i class="material-icons pull-right" [mdMenuTriggerFor]="testMenu">more_vert</i>
-                            <md-menu #testMenu="mdMenu" [overlapTrigger]="false" x-position="before">
-                                <a md-menu-item>Edit</a>
-                                <a md-menu-item>Delete</a>
-                                <a md-menu-item>Duplicate</a>
-                                <a md-menu-item [routerLink]="['settings']">Settings</a>
-                            </md-menu>
-                        </div>
-                        <div class="test-details">
-                            <p class="light-text">150 Questions</p>
-                            <p class="light-text">3 Sections</p>
-                            <p class="light-text">123 Candidates</p>
-                        </div>
-                        <div class="text-center">
-                            <button type="button" class="btn btn-primary">View Report</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-5ths col-sm-4">
-                    <div class="test-block">
-                        <div class="test-title clearfix">
-                            <h2 class="pull-left">BBIT 10-08-2017</h2>
-                            <i class="material-icons pull-right" [mdMenuTriggerFor]="testMenu">more_vert</i>
-                            <md-menu #testMenu="mdMenu" [overlapTrigger]="false" x-position="before">
-                                <a md-menu-item>Edit</a>
-                                <a md-menu-item>Delete</a>
-                                <a md-menu-item>Duplicate</a>
-                                <a md-menu-item [routerLink]="['settings']">Settings</a>
-                            </md-menu>
-                        </div>
-                        <div class="test-details">
-                            <p class="light-text">150 Questions</p>
-                            <p class="light-text">3 Sections</p>
-                            <p class="light-text">123 Candidates</p>
-                        </div>
-                        <div class="text-center">
-                            <button type="button" class="btn btn-primary">View Report</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-5ths col-sm-4">
-                    <div class="test-block">
-                        <div class="test-title clearfix">
-                            <h2 class="pull-left">BBIT 10-08-2017</h2>
-                            <i class="material-icons pull-right" [mdMenuTriggerFor]="testMenu">more_vert</i>
-                            <md-menu #testMenu="mdMenu" [overlapTrigger]="false" x-position="before">
-                                <a md-menu-item>Edit</a>
-                                <a md-menu-item>Delete</a>
-                                <a md-menu-item>Duplicate</a>
-                                <a md-menu-item [routerLink]="['settings']">Settings</a>
-                            </md-menu>
-                        </div>
-                        <div class="test-details">
-                            <p class="light-text">150 Questions</p>
-                            <p class="light-text">3 Sections</p>
-                            <p class="light-text">123 Candidates</p>
-                        </div>
-                        <div class="text-center">
-                            <button type="button" class="btn btn-primary">View Report</button>
+                <div *ngFor="let test of Tests | filter: term ">
+                    <div class="col-md-5ths col-sm-4">
+                        <div class="test-block">
+                            <div class="test-title clearfix">
+                                <h2 class="pull-left">{{test.TestName}}</h2>
+                                <i class="material-icons pull-right" [mdMenuTriggerFor]="testMenu">more_vert</i>
+                                <md-menu #testMenu="mdMenu" [overlapTrigger]="false" x-position="before">
+                                    <a md-menu-item>Edit</a>
+                                    <a md-menu-item>Delete</a>
+                                    <a md-menu-item>Duplicate</a>
+                                    <a md-menu-item [routerLink]="['settings']">Settings</a>
+                                </md-menu>
+                            </div>
+                            <div class="test-details">
+                                <p class="light-text">150 Questions</p>
+                                <p class="light-text">3 Sections</p>
+                                <p class="light-text">123 Candidates</p>
+                            </div>
+                            <div class="text-center">
+                                <button type="button" class="btn btn-primary">View Report</button>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -173,3 +43,4 @@
         </div>
     </div>
 </div>
+
