Client Side Edit Ui implemented Client side Api implememted Useless Method Deleted

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/add-category-dialog.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/add-category-dialog.html
@@ -6,7 +6,7 @@
     <div class="dialog-body">
         <div class="form-group">
             <label class="h4">Section Name</label>
-            <input type="text" class="form-control" (change)="CheckDuplicateCategoryName(category.CategoryName)" [(ngModel)]="category.CategoryName" placeholder="Ex. General Knowledge" />
+            <input type="text" class="form-control" (keyup)="CheckDuplicateCategoryName(category.CategoryName)" [(ngModel)]="category.CategoryName" placeholder="Ex. General Knowledge" />
             <span *ngIf="isNameExist" style="color:darkred">*Category Name Already Exists</span>
         </div>
     </div>
