--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/questions-dashboard.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/questions-dashboard.html
@@ -46,69 +46,20 @@
                     </md-menu>
                 </div>
                 <div class="questions-area">
-                    <div class="qs-block clearfix">
+                    <div *ngFor="let q of questionDisplay;let i = index"class="qs-block clearfix">
                         <div class="pull-left">
                             <div class="qs-container">
-                                <p class="qs-num">Q.1</p>
-                                <div class="qs-text">
-                                    <p class="question">What is Git?</p>
-                                    <p class="ans-option correct"><span>a.</span> <span>Distributed Source Control System</span></p>
-                                    <p class="ans-option"><span>b.</span> <span>Distributed Project Management System</span></p>
-                                    <p class="ans-option"><span>c.</span> <span>Global Integer Track</span></p>
-                                    <p class="ans-option"><span>d.</span> <span>None of the above</span></p>
+                                <p class="qs-num">Q.{{i+1}}</p>
+                                <div class="qs-text" >
+                                    <p class="question">{{q.questionDetail}}</p>
+                                        <div *ngFor="let o of q.singleMultipleAnswerQuestionOption; let j = index">
+                                            <p *ngIf="QuestionType[q.questionType] != QuestionType[2]" [ngClass]="isCorrectAnswer(o.isAnswer)" class="ans-option "><span>{{alpha[j]}}</span> <span>{{o.option}}</span></p>
+                                        </div>
                                 </div>
                             </div>
                             <div class="mt10">
-                                <p class="tags">Technical Aptitude</p>
-                                <p class="tags">Easy</p>
-                            </div>
-                        </div>
-                        <i class="material-icons pull-right" [mdMenuTriggerFor]="quesMoreMenu">more_vert</i>
-                        <md-menu #quesMoreMenu="mdMenu" [overlapTrigger]="false" x-position="before">
-                            <button md-menu-item>Edit</button>
-                            <button md-menu-item (click)="deleteQuestionDialog()">Delete</button>
-                            <button md-menu-item>Duplicate</button>
-                        </md-menu>
-                    </div>
-                    <div class="qs-block clearfix">
-                        <div class="pull-left">
-                            <div class="qs-container">
-                                <p class="qs-num">Q.2</p>
-                                <div class="qs-text">
-                                    <p class="question">Today is Monday, After 61 days, it will be</p>
-                                    <p class="ans-option"><span>a.</span> <span>Wednesday</span></p>
-                                    <p class="ans-option correct"><span>b.</span> <span>Saturday</span></p>
-                                    <p class="ans-option"><span>c.</span> <span>Tuesday</span></p>
-                                    <p class="ans-option"><span>d.</span> <span>Thursday</span></p>
-                                </div>
-                            </div>
-                            <div class="mt10">
-                                <p class="tags">Logical Reasoning</p>
-                                <p class="tags">Easy</p>
-                            </div>
-                        </div>
-                        <i class="material-icons pull-right" [mdMenuTriggerFor]="quesMoreMenu">more_vert</i>
-                        <md-menu #quesMoreMenu="mdMenu" [overlapTrigger]="false" x-position="before">
-                            <button md-menu-item>Edit</button>
-                            <button md-menu-item (click)="deleteQuestionDialog()">Delete</button>
-                            <button md-menu-item>Duplicate</button>
-                        </md-menu>
-                    </div>
-                    <div class="qs-block clearfix">
-                        <div class="pull-left">
-                            <div class="qs-container">
-                                <p class="qs-num">Q.3</p>
-                                <div class="qs-text">
-                                    <p class="question">Which type of C++ object can have its elements changed, added to, or removed?</p>
-                                    <p class="ans-option"><span>a.</span> <span>String</span></p>
-                                    <p class="ans-option correct"><span>b.</span> <span>Mutable</span></p>
-                                    <p class="ans-option"><span>c.</span> <span>MemDev()</span></p>
-                                    <p class="ans-option"><span>d.</span> <span>Immutable</span></p>
-                                </div>
-                            </div>
-                            <div class="mt10">
-                                <p class="tags">Technical Aptitude</p>
-                                <p class="tags">Medium</p>
+                                <p class="tags">{{q.category.categoryName}}</p>
+                                <p class="tags">{{DifficultyLevel[q.difficultyLevel]}}</p>
                             </div>
                         </div>
                         <i class="material-icons pull-right" [mdMenuTriggerFor]="quesMoreMenu">more_vert</i>
