Changes in profile-edit.component.ts, profile-dashboard.component.ts,profile-edit.html,profile.model.ts and profile.service.ts(Typescript format changed to camelCase

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-edit/profile-edit.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-edit/profile-edit.html
@@ -23,7 +23,7 @@
         </div>
         <div class="actions-area">
           <button type="button" class="btn">Cancel</button>
-          <button type="submit" class="btn btn-primary" (click)="UpdateUserDetails()">Save Changes</button>
+          <button type="submit" class="btn btn-primary" (click)="updateUserDetails()">Save Changes</button>
         </div>
       </form>
     </div>
