Client side Component Created,added method to add and Update Category

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/add-category-dialog.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/add-category-dialog.html
@@ -9,9 +9,8 @@
       <input type="text" class="form-control" placeholder="Ex. General Knowledge" />
       <div class="errors-container"></div>
     </div>
-  </md-dialog-content>
-  <md-dialog-actions>
-    <button type="button" class="btn" md-dialog-close>Cancel</button>
-    <button type="submit" class="btn btn-primary">Create</button>
-  </md-dialog-actions>
+    <div class="dialog-actions">
+        <button type="button" class="btn" md-dialog-close>Cancel</button>
+        <button type="submit" class="btn btn-primary" [disabled]="isNameExist" (click)="CategoryAdd(category)">Create</button>
+    </div>
 </div>
