Client side api created ,implement design of Edit dialog

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/add-category-dialog.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/add-category-dialog.html
@@ -11,6 +11,6 @@
   </md-dialog-content>
   <md-dialog-actions>
     <button type="button" class="btn" md-dialog-close>Cancel</button>
-    <button type="submit" class="btn btn-primary" (click)="CategoryAdd(category)">Create</button>
+    <button type="submit" class="btn btn-primary" [disabled]="isNameExist" (click)="CategoryAdd(category)">Create</button>
   </md-dialog-actions>
 </div>
