changes in removeCategory method add checkCategoryName method send http(delete) request from client side remove category from dashboard

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/delete-category-dialog.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/delete-category-dialog.html
@@ -8,6 +8,6 @@
     </div>
     <div class="dialog-actions">
         <button type="button" class="btn" md-dialog-close>No</button>
-        <button type="submit" class="btn btn-primary">Yes</button>
+        <button type="submit" class="btn btn-primary" (click)="removeCategory(categoryNameToDelete)">Yes</button>
     </div>
 </div>
